# DataFrame

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  publish.sh  schema.json  tidy.pl
cmake/: DataFrame.cmake  FindArrow.cmake  FindBSONCXX.cmake  FindLZ4.cmake
cpp/: CMakeLists.txt  DataFrameConfig.cmake.in
cpp/cmake/: DataFrame.cmake  FindArrow.cmake
cpp/include/dataframe/: array.hpp  dataframe.hpp
cpp/include/dataframe/array/: cast.hpp  select.hpp  split.hpp  view.hpp
cpp/include/dataframe/array/cast/: datetime.hpp  dict.hpp  list.hpp  primitive.hpp
cpp/include/dataframe/array/make/: bool.hpp  dict.hpp  list.hpp  null.hpp  opaque.hpp  primitive.hpp  string.hpp
cpp/include/dataframe/array/type/: bool.hpp  datetime.hpp  iterator.hpp  list.hpp  null.hpp  primitive.hpp
cpp/include/dataframe/array/view/: bool.hpp  dict.hpp  pod.hpp  primitive.hpp
cpp/include/dataframe/serializer/: base.hpp  feather.hpp  json.hpp  record_batch_file.hpp  record_batch_stream.hpp
cpp/include/dataframe/serializer/bson/: column_reader.hpp  column_writer.hpp  data_reader.hpp  schema.hpp  type_reader.hpp  type_writer.hpp
cpp/include/dataframe/table/: column.hpp  data_frame.hpp  select.hpp  sort.hpp  split.hpp
cpp/tests/: CMakeLists.txt
cpp/tests/array/: CMakeLists.txt
cpp/tests/array/src/: bind.cpp  type.cpp  view.cpp
cpp/tests/include/: make_data.hpp
cpp/tests/serializer/: CMakeLists.txt
cpp/tests/serializer/src/: bson.cpp  feather.cpp  record_batch_file.cpp  record_batch_stream.cpp  test_serializer.hpp
cpp/tests/table/: CMakeLists.txt
docs/: .gitignore  bson_format.ipynb
docs/source/: bson_format.ipynb  bson_format.rst  conf.py  index.rst
example/: CMakeLists.txt
example/src/: dataframe.cpp
include/dataframe/: array.hpp  column.hpp  concatenate.hpp  concatinate.hpp  data_frame.hpp  data_type.hpp  data_view.hpp  dataframe.hpp  error.hpp  io.hpp  join.hpp  rcpp.hpp  select.hpp  serializer.hpp  sort.hpp  splice.hpp  split.hpp  table.hpp  traits.hpp
include/dataframe/array/: bind.hpp  bool.hpp  cast.hpp  categorical.hpp  date_time.hpp  datetime.hpp  list.hpp  make.hpp  make_array.hpp  mask.hpp  primitive.hpp  repeat.hpp  select.hpp  split.hpp  string.hpp  struct.hpp  traits.hpp  type.hpp  view.hpp
include/dataframe/array/cast/: bool.hpp  datetime.hpp  dict.hpp  list.hpp  null.hpp  opaque.hpp  pod.hpp  primitive.hpp  string.hpp  struct.hpp
include/dataframe/array/make/: bool.hpp  datetime.hpp  dict.hpp  iterator.hpp  list.hpp  null.hpp  pod.hpp  primitive.hpp  string.hpp  struct.hpp
include/dataframe/array/type/: bool.hpp  datetime.hpp  dict.hpp  iterator.hpp  list.hpp  null.hpp  opaque.hpp  pod.hpp  primitive.hpp  string.hpp  struct.hpp
include/dataframe/array/view/: bool.hpp  dict.hpp  list.hpp  null.hpp  pod.hpp  primitive.hpp  string.hpp  struct.hpp
include/dataframe/internal/: categorical_visitor.hpp  date_time_visitor.hpp  primitive_visitor.hpp  string_visitor.hpp
include/dataframe/ipc/: arrow.hpp
include/dataframe/serializer/: base.hpp  bson.hpp  csv.hpp  feather.hpp  json.hpp  record_batch_file.hpp  record_batch_stream.hpp
include/dataframe/serializer/bson/: column_reader.hpp  column_writer.hpp  compress.hpp  data_reader.hpp  data_writer.hpp  reader.hpp  schema.hpp  type_reader.hpp  type_writer.hpp  writer.hpp
include/dataframe/table/: bind.hpp  column.hpp  data_frame.hpp  data_view.hpp  join.hpp  make.hpp  rcpp.hpp  sort.hpp  splice.hpp  split.hpp
python/: CMakeLists.txt  setup.py
python/arrow_bson/: __init__.py  array_data.py  column_reader.py  column_writer.py  compress.py  data_reader.py  data_writer.py  schema.py  type_reader.py  type_writer.py  visitor.py
python/bson_dataframe/: __init__.py  array.py  array_data.py  arrow.py  codec.py  compress.py  data_reader.py  data_writer.py  dataframe.py  numpy.py  pandas.py  schema.py  type_writer.py  visitor.py
python/tests/: arrow.py  runtest.py  schema.py  test.py  test_data.py  test_numpy.py  test_schema.py
tests/: CMakeLists.txt
tests/array/: CMakeLists.txt
tests/array/src/: bind.cpp  cast.cpp  datetime.cpp  list.cpp  make.cpp  string.cpp  struct.cpp  type.cpp  view.cpp
tests/array/view/: CMakeLists.txt
tests/array/view/src/: list.cpp  primitive.cpp  struct.cpp
tests/include/: generate_data.hpp  make_data.hpp
tests/serializer/: CMakeLists.txt
tests/serializer/src/: arrow.cpp  bson.cpp  feather.cpp  generate_data.hpp  json.cpp  record_batch_file.cpp  record_batch_stream.cpp  test_serializer.hpp
tests/src/: concatenate.cpp  dataframe.cpp  join.cpp  rcpp.cpp  serializer.cpp  serializer_bson.cpp  sort.cpp
tests/table/: CMakeLists.txt
tests/table/src/: data_frame.cpp  join.cpp  rcpp.cpp  sort.cpp
